compiler/test/parse-err/vector-fill-row-vector.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func VectorFillRowVector(m: Matrix<1, s, int>, x: int) -> Matrix<1, s, int> {
    // expected-error@below{{vector fill [:] used with non-vector base}}
    // expected-note@below{{base has type Matrix<1, s, int>}}
    m[:] = x;
    return m;
}
